# snipped_rustui

./: Cargo.toml  README.md
src/: app.rs  env.rs  git.rs  key.rs  main.rs  note.rs  view.rs
