[package]
name = "snippet_rustui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.25", features = [ "serde" ] }
tui = { version = "0.19.0", default-features = false, features = ['crossterm', 'serde'] }
arboard = "3.2.0"
unicode-width = "0.1.10"
